import "global/battleground_msg.proto";

package common.protocol.M2G;


message EnterBGReply
{
	enum ErrCode
	{
		SUCCESS = 0;
	}

	required common.protocol.global.BGEnterType enter_type  = 1;
	required ErrCode err_code      = 2;
	required int64 roleid          = 3;
	required int64 bg_serial_num  = 4;
	required int32 bg_templ_id    = 5;
	required int32 src_world_id    = 6;
	required float src_pos_x       = 7;
	required float src_pos_y       = 8;
	required int32 des_world_id    = 9;
}

