package common.protocol.M2G;

message JoinTeam
{
	required int64 receiver     = 1;
	required int64 new_memberid = 2;
	required int32 pos          = 3;
}

message LeaveTeam
{
	required int64 receiver     = 1;
	required int64 leave_roleid = 2;
}

message ChangeTeamLeader
{
	required int64 receiver     = 1;
	required int64 new_leaderid = 2;
}

message ChangeTeamPos
{
	required int64 receiver     = 1;
	required int32 src_index    = 2;
	required int32 des_index    = 3;
}

message TeamInfo
{
	required int64 receiver     = 1;
	required int32 teamid       = 2;
	required int64 leaderid     = 3;
	required int64 pos1         = 4;
	required int64 pos2         = 5;
	required int64 pos3         = 6;
	required int64 pos4         = 7;
}

message QueryTeamMember
{
	required int64 receiver     = 1; // 被查询的玩家
	required int64 query_roleid = 2; // 查询的玩家
	required int32 link_id      = 3; // 查询者的linkid
	required int32 client_sid_in_link = 4; // 查询者的sid
}

message JoinTeamReq
{
	required int64 receiver     = 1;
	required int64 requester    = 2;
	required bytes first_name   = 3;
	required bytes mid_name     = 4;
	required bytes last_name    = 5;
	required int32 invite       = 6;
}

message TeamLeaderConvene
{
    required int64 receiver = 1;
    required int64 leaderid = 2; // 队长发起的召集队友
    required int32 world_id = 3;
    required float pos_x    = 4;
    required float pos_y    = 5;
}

message MapTeamMemberInfo
{
    required int32 masterid     = 1;
    required int64 roleid       = 2;
    required int32 gender       = 3;
    required int32 cls          = 4;
    required int32 level        = 5;
    required int32 combat_value = 6;
    required bytes first_name   = 7;
    required bytes mid_name     = 8;
    required bytes last_name    = 9;
    required int32 pos          = 10; // 在队伍中的位置 0~3
}

message MapTeamInfo
{
    required int64 leader = 1;
    required int64 roleid = 2; // 玩家本人的id
    repeated MapTeamMemberInfo members = 3;
}

